--- a/client/src/App.css
+++ b/client/src/App.css
@@ -167,7 +167,26 @@ img {
   color: #333;
 }
 
+@keyframes myAnimation {
+  0% {
+    opacity: 1;
+    transform: rotateX(90deg);
+  }
+  50% {
+    opacity: 0.5;
+    transform: rotateX(0deg);
+  }
+  100% {
+    display: none;
+    opacity: 0;
+    transform: rotateX(90deg);
+  }
+}
+
 .alert {
+  animation-name: myAnimation;
+  animation-duration: 2000ms;
+  animation-fill-mode: forwards;
   padding: 0.8rem;
   margin: 1rem 0;
   opacity: 0.9;
